--- a/ui/editor.ui
+++ b/ui/editor.ui
@@ -70,6 +70,7 @@
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
             <property name="text" translatable="yes">Settings</property>
+            <signal name="clicked" handler="settings" swapped="no"/>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -107,6 +108,7 @@
         <property name="bottom-padding">32</property>
         <property name="left-padding">64</property>
         <property name="right-padding">64</property>
+        <signal name="show" handler="init" swapped="no"/>
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
@@ -540,7 +542,7 @@
       </object>
     </child>
     <child type="titlebar">
-      <object class="GtkHeaderBar">
+      <object class="GtkHeaderBar" id="editorTitle">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
         <property name="title" translatable="yes">Project Name</property>
@@ -693,6 +695,7 @@
   </object>
   <object class="GtkAboutDialog" id="aboutDialog">
     <property name="can-focus">False</property>
+    <property name="resizable">False</property>
     <property name="modal">True</property>
     <property name="type-hint">dialog</property>
     <property name="transient-for">editorWindow</property>
@@ -720,6 +723,157 @@ See the &lt;a href="https://www.gnu.org/licenses/gpl-3.0.html"&gt;GNU General Pu
             <property name="position">0</property>
           </packing>
         </child>
+      </object>
+    </child>
+  </object>
+  <object class="GtkWindow" id="settingsDialog">
+    <property name="width-request">512</property>
+    <property name="height-request">420</property>
+    <property name="can-focus">False</property>
+    <property name="resizable">False</property>
+    <property name="modal">True</property>
+    <property name="type-hint">dialog</property>
+    <property name="transient-for">editorWindow</property>
+    <signal name="delete-event" handler="settingsHide" swapped="no"/>
+    <child>
+      <object class="GtkAlignment">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="top-padding">32</property>
+        <property name="bottom-padding">32</property>
+        <property name="left-padding">32</property>
+        <property name="right-padding">32</property>
+        <child>
+          <object class="GtkFrame">
+            <property name="visible">True</property>
+            <property name="can-focus">False</property>
+            <property name="label-xalign">0</property>
+            <property name="shadow-type">out</property>
+            <child>
+              <object class="GtkListBox" id="settingsList">
+                <property name="visible">True</property>
+                <property name="can-focus">False</property>
+                <signal name="row-activated" handler="settingAction" swapped="no"/>
+                <child>
+                  <object class="GtkListBoxRow">
+                    <property name="height-request">46</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="selectable">False</property>
+                    <child>
+                      <object class="GtkAlignment">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="top-padding">8</property>
+                        <property name="bottom-padding">8</property>
+                        <property name="left-padding">12</property>
+                        <property name="right-padding">12</property>
+                        <child>
+                          <object class="GtkBox">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="spacing">8</property>
+                            <child>
+                              <object class="GtkLabel">
+                                <property name="visible">True</property>
+                                <property name="can-focus">False</property>
+                                <property name="halign">start</property>
+                                <property name="label" translatable="yes">Current Project Location</property>
+                              </object>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="settingDirLabel">
+                                <property name="visible">True</property>
+                                <property name="can-focus">False</property>
+                                <property name="halign">end</property>
+                                <property name="label" translatable="yes">{settingDirLabel}</property>
+                                <property name="wrap">True</property>
+                                <property name="ellipsize">start</property>
+                                <property name="max-width-chars">30</property>
+                              </object>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkListBoxRow">
+                    <property name="height-request">46</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="selectable">False</property>
+                    <child>
+                      <object class="GtkAlignment">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="top-padding">8</property>
+                        <property name="bottom-padding">8</property>
+                        <property name="left-padding">12</property>
+                        <property name="right-padding">12</property>
+                        <child>
+                          <object class="GtkBox">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="spacing">8</property>
+                            <child>
+                              <object class="GtkLabel">
+                                <property name="visible">True</property>
+                                <property name="can-focus">False</property>
+                                <property name="halign">start</property>
+                                <property name="label" translatable="yes">Default Text Editor</property>
+                              </object>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="settingEditorLabel">
+                                <property name="visible">True</property>
+                                <property name="can-focus">False</property>
+                                <property name="halign">end</property>
+                                <property name="label" translatable="yes">{settingEditorLabel}</property>
+                              </object>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+            <child type="label_item">
+              <placeholder/>
+            </child>
+          </object>
+        </child>
+      </object>
+    </child>
+    <child type="titlebar">
+      <object class="GtkHeaderBar">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="title" translatable="yes">Settings</property>
+        <property name="show-close-button">True</property>
       </object>
     </child>
   </object>
