--- a/ui/welcome.ui
+++ b/ui/welcome.ui
@@ -112,6 +112,7 @@
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
+                    <signal name="clicked" handler="openProject" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -156,6 +157,7 @@
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
+            <signal name="clicked" handler="openProject" swapped="no"/>
             <child>
               <object class="GtkImage">
                 <property name="visible">True</property>
@@ -403,6 +405,7 @@
             <property name="visible">True</property>
             <property name="can-focus">True</property>
             <property name="receives-default">True</property>
+            <signal name="clicked" handler="cancelNew" swapped="no"/>
             <signal name="clicked" handler="newHide" swapped="no"/>
           </object>
         </child>
